# mirror-beautifulsoup4

./: CHANGELOG  NEWS.txt  README.md  prepare-release.sh  pyproject.toml  setup.py  tox.ini
bs4/: __init__.py  _deprecation.py  _typing.py  _warnings.py  css.py  dammit.py  diagnose.py  element.py  filter.py  formatter.py  match.py  select.py  strainer.py  testing.py
bs4/builder/: __init__.py  _html5lib.py  _htmlparser.py  _lxml.py
bs4/tests/: __init__.py  test_builder.py  test_builder_registry.py  test_css.py  test_dammit.py  test_docs.py  test_element.py  test_filter.py  test_formatter.py  test_fuzz.py  test_html5lib.py  test_htmlparser.py  test_lxml.py  test_match.py  test_navigablestring.py  test_pageelement.py  test_select.py  test_soup.py  test_strainer.py  test_tag.py  test_tree.py
bs4/tests/fuzz/: clusterfuzz-testcase-minimized-bs4_fuzzer-6401239223762944.testcase
doc/: conf.py  index.rst
doc.es/: Makefile  conf.py  index.rst
doc.es/api/: bs4.builder.rst  bs4.rst
doc.html/: index.kr.html
doc.ptbr/source/: index.rst
doc.zh/source/: index.rst
doc/source/: README  conf.py  index.ptbr.rst  index.rst
scripts/: type_checking_smoke_test.py
